--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">StoryApp</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_map">Map</string>
+    <string name="title_settings">Settings</string>
+
+    <string name="valid_email">Please input a valid email</string>
+    <string name="email_cannot_empty">Email cannot be empty</string>
+    <string name="password_minimum">Password must consist of minimum 6 characters</string>
 </resources>
