--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,7 @@
     <string name="please_active_location">Please activate your location service!</string>
     <string name="upload_success">Story uploaded successfully!</string>
     <string name="upload_failed">Story failed to upload!</string>
+    <string name="on_location">Turn on Location</string>
 
 
 </resources>
